automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -6,7 +6,10 @@
   </head>
   <body>
     <form class="" action="/pirates" method="post">
-      
+      <h1>Pirate Information</h1></br>
+      <label for="pirate_name"><input type="text" name="pirate_name" value=""></label>
+      <label for="pirate_weight"><input type="text" name="pirate_weight" value=""></label>
+      <label for="pirate_height"><input type="text" name="pirate_height" value=""></label>
     </form>
   </body>
 </html>
