automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -10,6 +10,9 @@
       <label for="pirate_name"><input type="text" name="pirate_name" value=""></label>
       <label for="pirate_weight"><input type="text" name="pirate_weight" value=""></label>
       <label for="pirate_height"><input type="text" name="pirate_height" value=""></label>
+      <h2>Ship 1 Information</h2></br>
+      <h2>Ship 2 Information</h2></br>
+      <input type="submit" name="" value="Submit">
     </form>
   </body>
 </html>
