automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -11,7 +11,13 @@
       <label for="pirate_weight"><input type="text" name="pirate_weight" value=""></label>
       <label for="pirate_height"><input type="text" name="pirate_height" value=""></label>
       <h2>Ship 1 Information</h2></br>
+      <label for="ship_name_1"><input type="text" name="ship_name_1" value=""></label>
+      <label for="ship_type_1"><input type="text" name="ship_type_1" value=""></label>
+      <label for="ship_booty_1"><input type="text" name="ship_booty_1" value=""></label>
       <h2>Ship 2 Information</h2></br>
+      <label for="ship_name_2"><input type="text" name="ship_name_2" value=""></label>
+      <label for="ship_type_2"><input type="text" name="ship_type_2" value=""></label>
+      <label for="ship_booty_2"><input type="text" name="ship_booty_2" value=""></label>
       <input type="submit" name="" value="Submit">
     </form>
   </body>
