automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -7,17 +7,17 @@
   <body>
     <form class="" action="/pirates" method="post">
       <h1>Pirate Information</h1></br>
-      <label for="pirate_name"><input type="text" name="pirate_name" value=""></label>
-      <label for="pirate_weight"><input type="text" name="pirate_weight" value=""></label>
-      <label for="pirate_height"><input type="text" name="pirate_height" value=""></label>
+      <label for="pirate_name"><input type="text" id="pirate_name" name="pirate[name]" value=""></label>
+      <label for="pirate_weight"><input type="text" id="pirate_weight" name="pirate[weight]" value=""></label>
+      <label for="pirate_height"><input type="text" id="pirate_height" name="pirate[height]" value=""></label>
       <h2>Ship 1 Information</h2></br>
-      <label for="ship_name_1"><input type="text" name="ship_name_1" value=""></label>
-      <label for="ship_type_1"><input type="text" name="ship_type_1" value=""></label>
-      <label for="ship_booty_1"><input type="text" name="ship_booty_1" value=""></label>
+      <label for="ship_name_1"><input type="text" id="ship_name_1" value=""></label>
+      <label for="ship_type_1"><input type="text" id="ship_type_1" value=""></label>
+      <label for="ship_booty_1"><input type="text" id="ship_booty_1" value=""></label>
       <h2>Ship 2 Information</h2></br>
-      <label for="ship_name_2"><input type="text" name="ship_name_2" value=""></label>
-      <label for="ship_type_2"><input type="text" name="ship_type_2" value=""></label>
-      <label for="ship_booty_2"><input type="text" name="ship_booty_2" value=""></label>
+      <label for="ship_name_2"><input type="text" id="ship_name_2" value=""></label>
+      <label for="ship_type_2"><input type="text" id="ship_type_2" value=""></label>
+      <label for="ship_booty_2"><input type="text" id="ship_booty_2" value=""></label>
       <input type="submit" name="" value="Submit">
     </form>
   </body>
