automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -11,9 +11,9 @@
       <label for="pirate_weight"><input type="text" id="pirate_weight" name="pirate[weight]" value=""></label>
       <label for="pirate_height"><input type="text" id="pirate_height" name="pirate[height]" value=""></label>
       <h2>Ship 1 Information</h2></br>
-      <label for="ship_name_1"><input type="text" id="ship_name_1" value=""></label>
-      <label for="ship_type_1"><input type="text" id="ship_type_1" value=""></label>
-      <label for="ship_booty_1"><input type="text" id="ship_booty_1" value=""></label>
+      <label for="ship_name_1"><input type="text" id="ship_name_1" name="pirate[ships][][name]" value=""></label>
+      <label for="ship_type_1"><input type="text" id="ship_type_1" name="pirate[ships][][type]" value=""></label>
+      <label for="ship_booty_1"><input type="text" id="ship_booty_1" name="pirate[ships][][booty]" value=""></label>
       <h2>Ship 2 Information</h2></br>
       <label for="ship_name_2"><input type="text" id="ship_name_2" value=""></label>
       <label for="ship_type_2"><input type="text" id="ship_type_2" value=""></label>
