--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -15,9 +15,9 @@
       <label for="ship_type_1"><input type="text" id="ship_type_1" name="pirate[ships][][type]" value=""></label>
       <label for="ship_booty_1"><input type="text" id="ship_booty_1" name="pirate[ships][][booty]" value=""></label>
       <h2>Ship 2 Information</h2></br>
-      <label for="ship_name_2"><input type="text" id="ship_name_2" value=""></label>
-      <label for="ship_type_2"><input type="text" id="ship_type_2" value=""></label>
-      <label for="ship_booty_2"><input type="text" id="ship_booty_2" value=""></label>
+      <label for="ship_name_2"><input type="text" id="ship_name_2" name="pirate[ships][][name]" value=""></label>
+      <label for="ship_type_2"><input type="text" id="ship_type_2" name="pirate[ships][][type]" value=""></label>
+      <label for="ship_booty_2"><input type="text" id="ship_booty_2" name="pirate[ships][][booty]" value=""></label>
       <input type="submit" name="" value="Submit">
     </form>
   </body>
