--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,5 +1,5 @@
 <h1>Display your Pirate here</h1>
-
+<p>My pirate's name is: <%= @pirate.name %>, he weighs <%= @pirate.weight %> pounds, and is <%= @pirate.height %> inches tall.</p>
 
 <h2>Display your first ship here</h2>
 
