automatically backed up by learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -5,13 +5,9 @@
     <title></title>
   </head>
   <body>
-    <h1>Display your Pirate here</h1>
-    <p>My pirate's name is: <%= @pirate.name %>, he weighs <%= @pirate.weight %> pounds, and is <%= @pirate.height %> inches tall.</p>
 
-    <h2>Display your first ship here</h2>
-
-
-    <h2>Display your second ship here</h2>
+  <%= @pirates %>
+  <%= @ships %>
 
   </body>
 </html>
