automatically backed up by learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -7,10 +7,10 @@
   <body>
 
   <% @pirates.each do |pirate| %>
-  <%= pirate.name, pirate.weight, pirate.height %>
+  <%= pirate.name pirate.weight pirate.height %>
   <% end %>
 
-  
+
   <% @ships %>
 
   </body>
