--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -16,8 +16,8 @@
   <h2>Ship Information</h2>
   <% @ships.each do |ship| %>
   <p>Name: <%= ship.name %></p>
-  <p>Weight: <%= ship.weight %></p>
-  <pg>Height: <%= ship.height %></p>
+  <p>Weight: <%= ship.type %></p>
+  <pg>Height: <%= ship.booty %></p>
   <% end %>
   </body>
 </html>
