--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,23 @@
-<h1>Display your Pirate here</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
 
+  <h1>Pirate information</h1>
+  <% @pirates.each do |pirate| %>
+  <p>Name: <%= pirate.name %></p>
+  <p>Weight: <%= pirate.weight %></p>
+  <pg>Height: <%= pirate.height %></p>
+  <% end %>
 
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+  <h2>Ship Information</h2>
+  <% @ships.each do |ship| %>
+  <p>Name: <%= ship.name %></p>
+  <p>Weight: <%= ship.type %></p>
+  <pg>Height: <%= ship.booty %></p>
+  <% end %>
+  </body>
+</html>
